--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <header class="d-flex container  bg-light mb-5 fixed-top">
+    <header class="d-flex container  bg-light mb-5">
         <div>
             <nav class="navbar navbar-light bg-light ">
                 <div class="container-fluid">
@@ -204,8 +204,7 @@
             <div>
             <h1>LET'S STAY IN TOUCH</h1>
             <p>Get updates on sales, specials and more</p>
-            <input type="text" placeholder="Your Email">
-            <br>
+            <input type="text" class="form-control" placeholder="Your Email">
             <br>
             <button class="btn btn-primary">Submit</button>
         </div>
@@ -213,6 +212,9 @@
         <p class="text-center ">©2025. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
         
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 
     <!-- BootStrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
